# imige

./: .gitignore  CMakeLists.txt  README.md  test.mex  update_compile_commands_json.sh
src/: CMakeLists.txt  element.hpp  element_filters.hpp  fileformats.hpp  fileformats.tpp  image.h  image.hpp  image_filters.cpp  image_filters.h  image_filters.hpp  main.cpp  mex_function.c  mexmain.cc  palette.hpp  pixel.h  ppm_format.cpp  ppm_format.h
src/tests/: CMakeLists.txt  catch_utils.hpp  element_filters_test.cpp  fileformats_test.cpp  image_filters_test.cpp  image_test.cpp
